--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: README 更新
 
 on:
   schedule:
-    - cron: '0 * * * *' # 毎時0分に自動実行
-  workflow_dispatch:   # 手動でも実行可能
+    - cron: '0 * * * *' # 毎時0分に自動更新
+  workflow_dispatch:
 
 jobs:
   update-readme:
@@ -22,4 +22,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
           git commit -m "README ステータス更新 [skip ci]" || echo "変更なし"
-          git push
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
