--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,15 @@
-name: README 更新
+Name: README 更新
 
 on:
   schedule:
-    - cron: '0 * * * *' # 毎時0分に自動更新
+    - cron: '0 * * * *'
   workflow_dispatch:
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write 
     steps:
       - uses: actions/checkout@v3
       - name: Python 環境セットアップ
@@ -23,3 +25,5 @@ jobs:
           git add README.md
           git commit -m "README ステータス更新 [skip ci]" || echo "変更なし"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+
+#fuck
