--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: README 更新 # 1行目にスペースを入れました
+name: README 更新
 
 on:
   schedule:
@@ -16,11 +16,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+          
       - name: ステータス生成
+        env:
+          TZ: Asia/Tokyo
         run: python .github/scripts/generate_status.py
+        
       - name: README を更新してコミット
         run: |
-          git config user.name "github-actions[bot]"
+          git config user.name "github"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
           git commit -m "README ステータス更新 [skip ci]" || echo "変更なし"
